--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 	<body>
 		<h1>Hello</h1>
 		<h1>Welcome to remote</h1>
-		<h1>Continous Integration</h1>
+		<h1>Continous Integration test</h1>
 	</body
 </html>
