--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 		<h1>Hello</h1>
 		<h1>Welcome to remote</h1>
 		<h1>Continous Integration test</h1>
+		<h1>Continous Integration test2</h1>
 	</body
 </html>
