--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 		<h1>Continous Integration test2</h1>
 		<h1>Continous Integration test3</h1>
 		<h1>Continous Integration test4</h1>
+		<h1>Continous Integration test5</h1>
+		<h1>Continous Integration test6</h1>
 	</body
 </html>
