--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 	<body>
-		<h1>Hello</h1>
-		<h1>Welcome to remote</h1>
+		<h1>Hello World</h1>
 		<h1>Continous Integration test</h1>				
 	</body
 </html>
